--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,3 @@
-html {
-
-    font-family: 'Exo', sans-serif;
-
-}
-
-
 
 .context {
 
@@ -12,9 +5,7 @@ html {
 
     position: absolute;
 
-    top:50vh;
-
-    margin-top: -2.5%;
+    top: 40%;
 
     padding: 0px !important;
 
