--- a/assets/css/my-work.css
+++ b/assets/css/my-work.css
@@ -1,7 +1,3 @@
-html, a {
-    font-family: 'Exo', sans-serif;
-}
-
 a {
     color: white !important;
     text-decoration: none !important;
@@ -35,4 +31,9 @@ a:hover{
 
 .row {
     margin-top: 5%;
+}
+
+.return-home:hover {
+    font-weight: bold;
+    transition: 0.2s;
 }
